// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Padding all it should have a different padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding: 0;
}

@media (min-width:46.0625em) {
  .c0 {
    padding: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding all it should have a different padding for some breakpoints when the prop is passed 1`] = `
@media (min-width:46.0625em) {
  .c0 {
    padding: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding all it should have a single padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding: 0.25rem;
}

<div
  className="c0"
/>
`;

exports[`Padding bottom it should have a different padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-bottom: 0;
}

@media (min-width:46.0625em) {
  .c0 {
    padding-bottom: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-bottom: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding bottom it should have a different padding for some breakpoints when the prop is passed 1`] = `
@media (min-width:46.0625em) {
  .c0 {
    padding-bottom: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-bottom: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding bottom it should have a single padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-bottom: 0.25rem;
}

<div
  className="c0"
/>
`;

exports[`Padding horizontal it should have a different padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-left: 0;
  padding-right: 0;
}

@media (min-width:46.0625em) {
  .c0 {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding horizontal it should have a different padding for some breakpoints when the prop is passed 1`] = `
@media (min-width:46.0625em) {
  .c0 {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding horizontal it should have a single padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-left: 0.25rem;
  padding-right: 0.25rem;
}

<div
  className="c0"
/>
`;

exports[`Padding inline it should be set when the prop is true 1`] = `
.c0 {
  display: inline-block;
}

<div
  className="c0"
/>
`;

exports[`Padding it should have no styles when no props are passed 1`] = `
<div
  className=""
/>
`;

exports[`Padding left it should have a different padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-left: 0;
}

@media (min-width:46.0625em) {
  .c0 {
    padding-left: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-left: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding left it should have a different padding for some breakpoints when the prop is passed 1`] = `
@media (min-width:46.0625em) {
  .c0 {
    padding-left: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-left: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding left it should have a single padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-left: 0.25rem;
}

<div
  className="c0"
/>
`;

exports[`Padding right it should have a different padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-right: 0;
}

@media (min-width:46.0625em) {
  .c0 {
    padding-right: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-right: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding right it should have a different padding for some breakpoints when the prop is passed 1`] = `
@media (min-width:46.0625em) {
  .c0 {
    padding-right: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-right: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding right it should have a single padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-right: 0.25rem;
}

<div
  className="c0"
/>
`;

exports[`Padding top it should have a different padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-top: 0;
}

@media (min-width:46.0625em) {
  .c0 {
    padding-top: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-top: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding top it should have a different padding for some breakpoints when the prop is passed 1`] = `
@media (min-width:46.0625em) {
  .c0 {
    padding-top: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-top: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding top it should have a single padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-top: 0.25rem;
}

<div
  className="c0"
/>
`;

exports[`Padding vertical it should have a different padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-top: 0;
  padding-bottom: 0;
}

@media (min-width:46.0625em) {
  .c0 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding vertical it should have a different padding for some breakpoints when the prop is passed 1`] = `
@media (min-width:46.0625em) {
  .c0 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Padding vertical it should have a single padding for all breakpoints when the prop is passed 1`] = `
.c0 {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

<div
  className="c0"
/>
`;
